--- a/index.html
+++ b/index.html
@@ -1,84 +1,114 @@
 <doctype html>
 <html>
 	<head>
-		<title>Fit & Well</title>
+		<title>Fit &amp; Well</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="style.css">
+
+		<style>
+
+		</style>
 	</head>
 
 	<body>
+	<!-- 
+	Sources:
+	http://www.mayoclinic.org/
+	http://www.helpguide.org/
+	 -->
 		<a name="#home"></a>
-		<img src="images/logo.png" alt="Fit & Well Logo">
+		<img src="images/logo.png" alt="Fit &amp; Well Logo">
 
 		<nav>
 			<a href="#nutrition">Nutrition</a>
 			<a href="#exercise">Exercise</a>
-			<a href="#wellness">Wellness</a>
+			<a href="#wellness">Wellness &amp; Stress Management</a>
 			<a href="#contact">Contact Us</a>
 		</nav>
 
 		<section>
 			<img src="/">
-			<h1>Cardigan lo-fi</h1>
-			<p>Odd Future tote bag Portland, ennui normcore plaid tofu organic. Actually bitters keytar, Vice beard locavore blog whatever Pitchfork freegan leggings normcore. Fashion axe post-ironic Truffaut fingerstache ugh. Tousled Cosby sweater vegan, gastropub dreamcatcher selfies squid meh cardigan locavore Brooklyn next level kitsch DIY.</p>
+			<h1>Want to live a healthy lifestyle and leave your couch potato days behind?</h1>
+			<p>Fit &amp; Well is here to help you get started on the right track. We have broken it down into a few simple sections that will significantly improve your health. So take some time to explore and begin your journey to a <span>Fit &amp; Well</span> lifestyle</p>
 		</section>
 
 		<section>
-			<a name="nutrition">
+			<a name="nutrition"></a>
 			<img src="/">
-			<h1>Cardigan lo-fi</h1>
-			<p>Odd Future tote bag Portland, ennui normcore plaid tofu organic. Actually bitters keytar, Vice beard locavore blog whatever Pitchfork freegan leggings normcore. Fashion axe post-ironic Truffaut fingerstache ugh. Tousled Cosby sweater vegan, gastropub dreamcatcher selfies squid meh cardigan locavore Brooklyn next level kitsch DIY.</p>
+			<h2>Do you feel like the latest nutrition is always changing?</h2>
+			<p>While it's true that nutrition and diet is evolving, there are some nutrition basics you can keep in mind. By knowing these basics, you'll be better equipped to continue and thrive.</p>
 
 			<img src="/">
-			<h1>Cardigan lo-fi</h1>
-			<p>Odd Future tote bag Portland, ennui normcore plaid tofu organic. Actually bitters keytar, Vice beard locavore blog whatever Pitchfork freegan leggings normcore. Fashion axe post-ironic Truffaut fingerstache ugh. Tousled Cosby sweater vegan, gastropub dreamcatcher selfies squid meh cardigan locavore Brooklyn next level kitsch DIY.</p>
+			<h2>Healthy menus and shopping</h2>
+			<ul>
+				<li>Your shopping strategies should focus on fresh and unprocessed foods. That means spending more time in the produce section, where you can stock up on fruits and vegetables.</li>
+				<li>Keep an eye out too for whole grains and low-fat dairy products.</li>
+				<li>Also be sure to check out the farmers market during the growing season to see what local produce is available.</li>
+			</ul>
 
 			<img src="/">
-			<h1>Cardigan lo-fi</h1>
-			<p>Odd Future tote bag Portland, ennui normcore plaid tofu organic. Actually bitters keytar, Vice beard locavore blog whatever Pitchfork freegan leggings normcore. Fashion axe post-ironic Truffaut fingerstache ugh. Tousled Cosby sweater vegan, gastropub dreamcatcher selfies squid meh cardigan locavore Brooklyn next level kitsch DIY.</p>
-
+			<h2>Nutritional supplements</h2>
+			<ul>
+				<li>Nutritional supplements are meant to complement a healthy diet, not replace it.</li>
+				<li>If you're generally healthy and eat a wide variety of foods, you probably don't need nutritional supplements. In certain cases, however, fortified foods and dietary supplements may be useful in providing one or more nutrients.</li>
+				<li>You may also want to consider a nutritional supplement if you don't eat enough healthy foods or don't eat a healthy variety of foods.</li>
+			</ul>
 		</section>
 
 		<section>
-			<a name="exercise">
+			<a name="exercise"></a>
 			<img src="/">
-			<h1>Cardigan lo-fi</h1>
-			<p>Odd Future tote bag Portland, ennui normcore plaid tofu organic. Actually bitters keytar, Vice beard locavore blog whatever Pitchfork freegan leggings normcore. Fashion axe post-ironic Truffaut fingerstache ugh. Tousled Cosby sweater vegan, gastropub dreamcatcher selfies squid meh cardigan locavore Brooklyn next level kitsch DIY.</p>
+			<h2>Exercise &amp; a Healthy Lifestyle</h2>
+			<p>Exercise is one of the easiest and most effective ways of improving both your physical and mental health. By focusing on activities you enjoy and tailoring a regular exercise routine to your needs, you can experience health benefits and improve your own life.</p>
 
 			<img src="/">
-			<h1>Cardigan lo-fi</h1>
-			<p>Odd Future tote bag Portland, ennui normcore plaid tofu organic. Actually bitters keytar, Vice beard locavore blog whatever Pitchfork freegan leggings normcore. Fashion axe post-ironic Truffaut fingerstache ugh. Tousled Cosby sweater vegan, gastropub dreamcatcher selfies squid meh cardigan locavore Brooklyn next level kitsch DIY.</p>
+			<h2>Types of Exercise</h2>
+			<ul>
+				<li>Aerobic activities like running, cycling, and swimming strengthen your heart and increase your endurance.</li>
+				<li>Strength training like weight lifting or resistance training builds muscle and bone mass, improves balance and prevents falls. It’s one of the best counters to frailty in old age.</li>
+				<li>Flexibility exercises like stretching and yoga help prevent injury, enhance range of motion, reduce stiffness, and limit aches and pains.</li>
+			</ul>
 
 			<img src="/">
-			<h1>Cardigan lo-fi</h1>
-			<p>Odd Future tote bag Portland, ennui normcore plaid tofu organic. Actually bitters keytar, Vice beard locavore blog whatever Pitchfork freegan leggings normcore. Fashion axe post-ironic Truffaut fingerstache ugh. Tousled Cosby sweater vegan, gastropub dreamcatcher selfies squid meh cardigan locavore Brooklyn next level kitsch DIY.</p>
-
+			<h2>Easy Exercise Tips</h2>
+			<ul>
+				<li>Move more in your daily life. Look at your daily routine and consider ways to include activity here and there. Even small activities can add up over a day.</li>
+				<li>Focus on activities you enjoy. You’ll find it easier to stick with an exercise program that’s built around those activities.</li>
+				<li>Stay motivated by shaking things up and trying something new. Add other activities to your exercise program, or alter the way you pursue the exercises that have worked so far.</li>
+			</ul>
 		</section>
 
 		<section>
-			<a name="wellness">
+			<a name="wellness"></a>
 			<img src="/">
-			<h1>Cardigan lo-fi</h1>
-			<p>Odd Future tote bag Portland, ennui normcore plaid tofu organic. Actually bitters keytar, Vice beard locavore blog whatever Pitchfork freegan leggings normcore. Fashion axe post-ironic Truffaut fingerstache ugh. Tousled Cosby sweater vegan, gastropub dreamcatcher selfies squid meh cardigan locavore Brooklyn next level kitsch DIY.</p>
+			<h2>Wellness &amp; Stress Management</h2>
+			<p>Stress is a normal psychological and physical reaction to the ever increasing demands of life. Stress management gives you a range of tools to reset your internal alarm system. Don't wait until stress has a negative impact on your health, relationships or quality of life. Start practicing a range of stress management techniques today.</p>
 
 			<img src="/">
-			<h1>Cardigan lo-fi</h1>
-			<p>Odd Future tote bag Portland, ennui normcore plaid tofu organic. Actually bitters keytar, Vice beard locavore blog whatever Pitchfork freegan leggings normcore. Fashion axe post-ironic Truffaut fingerstache ugh. Tousled Cosby sweater vegan, gastropub dreamcatcher selfies squid meh cardigan locavore Brooklyn next level kitsch DIY.</p>
-
+			<h2>Stress Relief</h2>
+			<ul>
+				<li>The first step in successful stress relief is deciding to make a change in how you manage stress.</li>
+				<li>The next step is identifying your stress triggers.</li>
+				<li>Once you've identified your stress triggers, you can start thinking about strategies for dealing with them. Sometimes the solution may be as easy as turning off the TV when the evening news is too distressing.</li>
+			</ul>
+			
 			<img src="/">
-			<h1>Cardigan lo-fi</h1>
-			<p>Odd Future tote bag Portland, ennui normcore plaid tofu organic. Actually bitters keytar, Vice beard locavore blog whatever Pitchfork freegan leggings normcore. Fashion axe post-ironic Truffaut fingerstache ugh. Tousled Cosby sweater vegan, gastropub dreamcatcher selfies squid meh cardigan locavore Brooklyn next level kitsch DIY.</p>
-
+			<h2>Relaxation Techniques</h2>
+			<ul>
+				<li>Relaxation is invaluable for maintaining your health and well-being, and repairing the toll that stress takes on your mind and body.</li>
+				<li>Common relaxation techniques include meditation, mindfulness, tai chi and yoga. For a more active approach, walking outdoors or participating in a sporting sports activity can be relaxing.</li>
+				<li>Which technique you choose doesn't matter. What matters is that you select a technique that works for you and you practice achieving relaxation regularly.</li>
+			</ul>
 		</section>
 
 		<section id="form">
-			<a name="contact">
+			<a name="contact"></a>
 			<form action="form.php" method="GET">
-			First Name <input type="text" name="fname" placeholder="First Name"><br>
-			Last Name <input type="text" name="lname" placeholder="Last Name"><br>
-			Email <input type="email" name="email" placeholder="Email"><br>
-			Phone Number <input type="number" name="phone" pattern="[0-9] {10}" placeholder="Phone"><br>
+			<input type="text" name="fname" placeholder="First Name*" required>
+			<input type="text" name="lname" placeholder="Last Name*" required><br>
+			<input type="email" name="email" placeholder="Email*" required>
+			<input type="number" name="phone" pattern="[0-9] {10}" placeholder="Phone"><br>
 			<input type="submit" value="Submit">
 			</form>
 
