logo and text update for mobile

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
  -->
 	 	<section id="top-static">
 			<a name="home"></a>
-			<img src="images/fit-logo.png" alt="Fit &amp; Well Logo">
+			<img src="images/fit-logo.png" alt="Fit &amp; Well Logo" id="logo">
 			<div class="float-right">
 				<nav class="mrgn-8 float-left">
 					<a href="#nutrition">Nutrition</a>
