photo and text update for mobile

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 		</section>
 		<section id="content">
 			<section class="hght-200 mrgn-top dsply-blk">
-				<img src="images/healthy-body.jpg" class="img-size float-left">
-					<div class="mrgn-8 hght-252">
+				<img src="images/healthy-body-250.jpg" class="img-size float-left">
+					<div class="mrgn-8">
 						<h1>Want to live a healthy lifestyle?</h1>
 						<p class="fnt-2">Fit &amp; Well is here to help you get started on the right track. We have broken it down into a few simple sections that will significantly improve your health. So take some time to explore and begin your journey to a <span class="italic">Fit &amp; Well</span> lifestyle</p>
 					</div>
