Added home and updated mobile

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 			<img src="images/fit-logo.png" alt="Fit &amp; Well Logo" id="logo">
 			<div class="float-right">
 				<nav class="mrgn-8 float-left">
+					<a href="#home">Home</a>
 					<a href="#nutrition">Nutrition</a>
 					<a href="#exercise">Exercise</a>
 					<a href="#stress">Stress Management</a>
