Final page updates

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 			nav a:hover{
 				color: #259014;
-				font-weight: bold;
+				text-shadow: 0px 0px 10px #175a0c;
 			}
 		</style>
 	</head>
@@ -55,7 +55,7 @@
 			</div>
 		</section>
 		<section id="content">
-			<section class="hght-200 mrgn-top dsply-blk">
+			<section class="hght-header mrgn-top dsply-blk">
 				<img src="images/healthy-body-250.jpg" class="img-size float-left">
 					<div class="mrgn-8">
 						<h1>Want to live a healthy lifestyle?</h1>
@@ -64,7 +64,7 @@
 			</section>
 				
 
-			<section class="bkg-green hght-300">
+			<section class="bkg-green">
 				<div class="dsply-blk img-section" id="img-nutrition">
 				<a name="nutrition"></a>
 					<div class="section-text">
@@ -91,7 +91,7 @@
 				</div>
 			</section>
 
-			<section class="hght-300">
+			<section>
 				<div class="dsply-blk img-section" id="img-exercise">
 				<a name="exercise"></a>
 					<div class="section-text">
@@ -119,7 +119,7 @@
 				</div>
 			</section>
 
-			<section class="bkg-green hght-300">
+			<section class="bkg-green">
 				<div class="dsply-blk img-section" id="img-stress">
 				<a name="stress"></a>
 					<div class="section-text">
@@ -147,7 +147,7 @@
 				</div>
 			</section>
 
-			<section id="form" class="hght-200 mrgn-8">
+			<section id="form" class="hght-header mrgn-8">
 				<a name="contact"></a>
 				<h2>Contact Us</h2>
 				<form action="http://ehollis.ksuwdc.com/fitform.php" method="GET">
