--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 	 	<section id="top-static">
 			<a name="home"></a>
-			<img src="images/fit-logo.png" alt="Fit &amp; Well Logo" id="logo">
+			<img src="images/fitlogo.png" alt="Fit &amp; Well Logo" id="logo">
 			<div class="float-right">
 				<nav class="mrgn-8 float-left">
 					<a href="#home">Home</a>
