--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<doctype html>
+
 <html>
 	<head>
 		<title>Fit &amp; Well</title>
@@ -17,22 +17,12 @@
 				padding: .5em;
 			}
 
-			#logo{
-				margin: 1em;
-				position: relative;
-				background: url(images/fitlogo.png) no-repeat;
-				background-size: 100% 100%;
-				width: 288px;
-				height: 72px;
-				display: inline-block;
-			}
-
 			.bkg-green{
 				background: #259014;
 				background-size: cover;
 				width: 100%;
 				color: #fff;
-
+				/*position: relative;*/
 			}
 
 			.bkg-white{
@@ -106,34 +96,36 @@
 
 			<section class="bkg-green">
 				<a name="nutrition" class="dsply-inline"></a>
-				<div class="dsply-blk img-section" id="img-nutrition">
-					<div class="section-text">
-						<h2>Nutrition &amp; Diet</h2>
-						<p>While it's true that nutrition and diet is evolving, there are some nutrition basics you can keep in mind. By knowing these basics, you'll be better equipped to continue and thrive.</p>
+				<div class="section-wrapper">
+					<div class="img-section" id="img-nutrition">
+						<div class="section-text">
+							<h2>Nutrition &amp; Diet</h2>
+							<p>While it's true that nutrition and diet is evolving, there are some nutrition basics you can keep in mind. By knowing these basics, you'll be better equipped to continue and thrive.</p>
+						</div>
 					</div>
-				</div>
 
-				<div class="dsply-blk mrgn-8">
-					<h2>Healthy menus and shopping</h2>
-					<ul>
-						<li>Your shopping strategies should focus on fresh and unprocessed foods. That means spending more time in the produce section, where you can stock up on fruits and vegetables.</li>
-						<li>Keep an eye out too for whole grains and low-fat dairy products.</li>
-					</ul>
-				</div>
+					<div class="dsply-blk mrgn-8">
+						<h2>Healthy menus and shopping</h2>
+						<ul>
+							<li>Your shopping strategies should focus on fresh and unprocessed foods. That means spending more time in the produce section, where you can stock up on fruits and vegetables.</li>
+							<li>Keep an eye out too for whole grains and low-fat dairy products.</li>
+						</ul>
+					</div>
 
-				<div class="dsply-blk mrgn-8">
-					<h2>Nutritional supplements</h2>
-					<ul>
-						<li>Nutritional supplements are meant to complement a healthy diet, not replace it.</li>
-						<li>If you're generally healthy and eat a wide variety of foods, you probably don't need nutritional supplements. In certain cases, however, fortified foods and dietary supplements may be useful in providing one or more nutrients.</li>
-					</ul>
-					<a href="#home" class="button button-wht">Home</a>
-				</div>	
+					<div class="dsply-blk mrgn-8">
+						<h2>Nutritional supplements</h2>
+						<ul>
+							<li>Nutritional supplements are meant to complement a healthy diet, not replace it.</li>
+							<li>If you're generally healthy and eat a wide variety of foods, you probably don't need nutritional supplements. In certain cases, however, fortified foods and dietary supplements may be useful in providing one or more nutrients.</li>
+						</ul>
+						<a href="#home" class="button button-wht">Home</a>
+					</div>
+				</div>		
 			</section>
 
 			<section class="bkg-white">
 				<a name="exercise" class="dsply-inline"></a>
-				<div class="dsply-blk img-section" id="img-exercise">
+				<div class="img-section" id="img-exercise">
 					<div class="section-text">
 						<h2>Exercise &amp; a Healthy Lifestyle</h2>
 						<p>Exercise is one of the easiest and most effective ways of improving both your physical and mental health. By focusing on activities you enjoy and tailoring a regular exercise routine to your needs, you can experience health benefits and improve your own life.</p>
@@ -162,7 +154,7 @@
 
 			<section class="bkg-green">
 				<a name="stress" class="dsply-inline"></a>
-				<div class="dsply-blk img-section" id="img-stress">
+				<div class="img-section" id="img-stress">
 					<div class="section-text">
 						<h2>Wellness &amp; Stress Management</h2>
 						<p>Stress is a normal psychological and physical reaction to the ever increasing demands of life. Stress management gives you a range of tools to reset your internal alarm system. Start practicing a range of stress management techniques today.</p>
@@ -186,7 +178,6 @@
 					<a href="#home" class="button button-wht">Home</a>
 					<a href="#exercise" class="button button-wht">Exercise</a>
 				</div>	
-				
 			</section>
 
 			<section id="form" class="hght-header mrgn-8">
