--- a/index.html
+++ b/index.html
@@ -59,11 +59,16 @@
 
 	<body>
 	<!-- 
-	Sources:
-	http://www.mayoclinic.org/
-	http://www.helpguide.org/
+	Information Sources:
+	www.mayoclinic.org
+	www.helpguide.org
+
+	Photo Credits:
+	www.newhealthguide.org
+	www.secretsofhealthyeating.com
+	blog.placeboeffect.com
+
 	 -->
-		<a name="home" class="dsply-inline"></a>
 	 	<section id="top-static">
 			<div class="float-right">
 				<nav class="mrgn-8 float-left">
@@ -78,14 +83,9 @@
 		</section>
 		<section id="content">
 			<section id="topsection">
-				<p>Window size: <span id="size"></span> pixels</p>
-					<script>
-					window.onresize = function() {
-						document.getElementById("size").innerHTML = window.innerWidth;
-					};
-					</script>
 				<div id="top-wrapper">	
 					<img src="images/healthy-woman-main.jpg" id="topimg">
+					<a name="home" class="dsply-inline"></a>
 					<div id="topinfo">
 						<h1>Want to live a healthy lifestyle?</h1>
 						<p class="fnt-2">Fit &amp; Well is here to help you get started on the right track. We have broken it down into a few simple sections that will significantly improve your health. So take some time to explore and begin your journey to a <span class="italic">Fit &amp; Well</span> lifestyle</p>
@@ -95,7 +95,7 @@
 				
 
 			<section class="bkg-green">
-				<a name="nutrition" class="dsply-inline"></a>
+				
 				<div class="section-wrapper">
 					<div class="img-section" id="img-nutrition">
 						<div class="section-text">
@@ -103,6 +103,7 @@
 							<p>While it's true that nutrition and diet is evolving, there are some nutrition basics you can keep in mind. By knowing these basics, you'll be better equipped to continue and thrive.</p>
 						</div>
 					</div>
+					<a name="nutrition" class="dsply-inline"></a>
 
 					<div class="dsply-blk mrgn-8">
 						<h2>Healthy menus and shopping</h2>
@@ -124,13 +125,13 @@
 			</section>
 
 			<section class="bkg-white">
-				<a name="exercise" class="dsply-inline"></a>
 				<div class="img-section" id="img-exercise">
 					<div class="section-text">
 						<h2>Exercise &amp; a Healthy Lifestyle</h2>
 						<p>Exercise is one of the easiest and most effective ways of improving both your physical and mental health. By focusing on activities you enjoy and tailoring a regular exercise routine to your needs, you can experience health benefits and improve your own life.</p>
 					</div>
 				</div>
+				<a name="exercise" class="dsply-inline"></a>
 
 				<div class="dsply-blk mrgn-8">
 					<h2>Types of Exercise</h2>
@@ -153,13 +154,13 @@
 			</section>
 
 			<section class="bkg-green">
-				<a name="stress" class="dsply-inline"></a>
 				<div class="img-section" id="img-stress">
 					<div class="section-text">
 						<h2>Wellness &amp; Stress Management</h2>
 						<p>Stress is a normal psychological and physical reaction to the ever increasing demands of life. Stress management gives you a range of tools to reset your internal alarm system. Start practicing a range of stress management techniques today.</p>
 					</div>
 				</div>
+				<a name="stress" class="dsply-inline"></a>
 
 				<div class="dsply-blk mrgn-8">
 					<h2>Stress Relief</h2>
