--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<a name="home" class="dsply-inline"></a>
 					<div id="topinfo">
 						<h1>Want to live a healthy lifestyle?</h1>
-						<p class="fnt-2">Fit &amp; Well is here to help you get started on the right track. We have broken it down into a few simple sections that will significantly improve your health. So take some time to explore and begin your journey to a <span class="italic">Fit &amp; Well</span> lifestyle</p>
+						<p class="fnt-2">Fit &amp; Well is here to help you get started on the right track. We have broken it down into a few simple sections that will significantly improve your health. So take some time to explore and begin your journey to a <span class="italic">Fit &amp; Well lifestyle.</span></p>
 					</div>
 				</div>	
 			</section>
