Input type update for form
fix Android bug

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 					<input type="text" name="fname" placeholder="First Name*" required>
 					<input type="text" name="lname" placeholder="Last Name*" required><br>
 					<input type="email" name="email" placeholder="Email*" required>
-					<input type="number" name="phone" pattern="[0-9] {10}" placeholder="Phone"><br>
+					<input type="tel" name="phone" pattern="[0-9] {10}" placeholder="Phone"><br>
 	 				<textarea placeholder="Type Message Here" rows="5" cols="40" name="message"></textarea><br>
 
 					<span>*Indicates a required field</span><br>
