Updated to section color and top section height

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				background-size: cover;
 				width: 100%;
 				color: #fff;
-				/*position: relative;*/
+				margin-top: -1em;
 			}
 
 			.bkg-white{
@@ -122,7 +122,7 @@
 				</div>		
 			</section>
 
-			<section class="bkg-white">
+			<section class="bkg-green">
 				<div class="img-section" id="img-exercise">
 				<a name="exercise" class="dsply-inline"></a>
 					<div class="section-text">
@@ -145,8 +145,8 @@
 						<li>Move more in your daily life. Look at your daily routine and consider ways to include activity here and there. Even small activities can add up over a day.</li>
 						<li>Focus on activities you enjoy. You’ll find it easier to stick with an exercise program that’s built around those activities.</li>
 					</ul>
-					<a href="#home" class="button button-grn">Home</a>
-					<a href="#nutrition" class="button button-grn">Nutrition</a>
+					<a href="#home" class="button button-wht">Home</a>
+					<a href="#nutrition" class="button button-wht">Nutrition</a>
 				</div>	
 				
 			</section>
