--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Fit &amp; Well</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="height=device-height,width=device-width,initial-scale=1.0,maximum-scale=1.0">
 		<link rel="stylesheet" href="style.css">
 		<link rel="shortcut icon" href="images/fit-favicon.ico" type="image/x-icon">
 		<link rel="icon" href="images/fit-favicon.ico" type="image/x-icon">
