added ids to anchor tags
for android

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<section id="topsection">
 				<div id="top-wrapper">	
 					<img src="images/healthy-woman-main.jpg" id="topimg">
-					<a name="home" class="dsply-inline"></a>
+					<a name="home" id="home" class="dsply-inline"></a>
 					<div id="topinfo">
 						<h1>Want to live a healthy lifestyle?</h1>
 						<p class="fnt-2">Fit &amp; Well is here to help you get started on the right track. We have broken it down into a few simple sections that will significantly improve your health. So take some time to explore and begin your journey to a <span class="italic">Fit &amp; Well lifestyle.</span></p>
@@ -124,7 +124,7 @@
 
 			<section class="bkg-green">
 				<div class="img-section" id="img-exercise">
-				<a name="exercise" class="dsply-inline"></a>
+				<a name="exercise" id="exercise" class="dsply-inline"></a>
 					<div class="section-text">
 						<h2>Exercise &amp; a Healthy Lifestyle</h2>
 						<p>Exercise is one of the easiest and most effective ways of improving both your physical and mental health. By focusing on activities you enjoy and tailoring a regular exercise routine to your needs, you can experience health benefits and improve your own life.</p>
@@ -153,7 +153,7 @@
 
 			<section class="bkg-green">
 				<div class="img-section" id="img-stress">
-				<a name="stress" class="dsply-inline"></a>
+				<a name="stress" id="stress" class="dsply-inline"></a>
 					<div class="section-text">
 						<h2>Wellness &amp; Stress Management</h2>
 						<p>Stress is a normal psychological and physical reaction to the ever increasing demands of life. Stress management gives you a range of tools to reset your internal alarm system. Start practicing a range of stress management techniques today.</p>
@@ -180,7 +180,7 @@
 			</section>
 
 			<section id="form" class="hght-header mrgn-8">
-				<a name="contact" class="dsply-inline"></a>
+				<a name="contact" id="contact" class="dsply-inline"></a>
 				<h2>Contact Us</h2>
 				<form action="http://ehollis.ksuwdc.com/fitform.php" method="GET">
 					<input type="text" name="fname" placeholder="First Name*" required>
